...
    </LinearLayout>

    <TextView
        android:id="@+id/questionMultipleAnswer"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Multiple Answer Question Display Here"
...
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

       <LinearLayout
           android:orientation="vertical"
           android:id="@+id/group"
           android:paddingTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">



...

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/btnAnswerA"
                   android:textColor="#fff"
                   android:text="Answer A"
                   android:paddingLeft="5dp"
                   android:paddingRight="5dp"
                   android:textStyle="bold"
                   android:textAllCaps="false"
...
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/btnAnswerC"
                   android:textColor="#fff"
                   android:text="Answer C"
                   android:textAllCaps="false"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:paddingLeft="5dp"
...
