...
    <string name="email_address">Email Address</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already_registered ?</string>
    <string name="login">Login</string>
    <string name="user_profile">User Profile</string>
    <string name="register_now">Register Now</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="lastname">lastName</string>
    <string name="firstName">First Name</string>
    <string name="elementary_programming">Elementary Programming</string>
    <string name="selections">Selections</string>
    <string name="facts_of_the_day">Facts of the Day</string>
    <string name="the_java_programming_language_is_developed_by_james_gosling">The Java Programming Language is developed by James Gosling</string>
    <string name="show_next_facts"><![CDATA[Show next facts ->->->]]></string>
    <string name="settings">Settings</string>
    <string name="home">home</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="title_activity_development">Development</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="next_tutorial">Next Tutorial</string>
    <string name="back">BACK</string>
...
